[project]
name = "game-of-points-be"
version = "0.1.0"
description = ""
authors = [
    {name = "rchDev",email = "rizvan.chalilovas@proton.me"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "absl-py (==2.2.2)",
    "astunparse (==1.6.3)",
    "certifi (==2025.1.31)",
    "charset-normalizer (==3.4.1)",
    "filelock (==3.18.0)",
    "flatbuffers (==25.2.10)",
    "fsspec (==2025.3.2)",
    "gast (==0.6.0)",
    "google-pasta (==0.2.0)",
    "grpcio (==1.71.0)",
    "h5py (==3.13.0)",
    "idna (==3.10)",
    "jinja2 (==3.1.6)",
    "joblib (==1.4.2)",
    "keras (==3.9.2)",
    "libclang (==18.1.1)",
    "markdown (==3.8)",
    "markdown-it-py (==3.0.0)",
    "markupsafe (==3.0.2)",
    "mdurl (==0.1.2)",
    "ml-dtypes (==0.5.1)",
    "mpmath (==1.3.0)",
    "namex (==0.0.8)",
    "networkx (==3.4.2)",
    "numpy (==2.1.3)",
    "opt-einsum (==3.4.0)",
    "optree (==0.15.0)",
    "packaging (==24.2)",
    "pandas (==2.2.3)",
    "patsy (==1.0.1)",
    "pgmpy (==1.0.0)",
    "protobuf (==5.29.4)",
    "py4j (==0.10.9.9)",
    "pygments (==2.19.1)",
    "pyro-api (==0.1.2)",
    "pyro-ppl (==1.9.1)",
    "python-dateutil (==2.9.0.post0)",
    "pytz (==2025.2)",
    "requests (==2.32.3)",
    "rich (==14.0.0)",
    "scikit-learn (==1.6.1)",
    "scipy (==1.15.2)",
    "setuptools (==78.1.0)",
    "six (==1.17.0)",
    "statsmodels (==0.14.4)",
    "sympy (==1.13.1)",
    "tensorboard (==2.19.0)",
    "tensorboard-data-server (==0.7.2)",
    "tensorflow (==2.19.0)",
    "tensorflow-hub (==0.16.1)",
    "tensorflow-text (==2.19.0)",
    "termcolor (==3.0.1)",
    "tf-keras (==2.19.0)",
    "threadpoolctl (==3.6.0)",
    "torch (==2.6.0)",
    "tqdm (==4.67.1)",
    "typing-extensions (==4.13.2)",
    "tzdata (==2025.2)",
    "urllib3 (==2.4.0)",
    "werkzeug (==3.1.3)",
    "wheel (==0.45.1)",
    "wrapt (==1.17.2)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
